--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -2,104 +2,152 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Wysyłanie emaila</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Logowanie – Supabase</title>
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      padding: 40px;
-    }
-    .box {
-      max-width: 400px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-    }
-    input, button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      font-size: 16px;
-    }
-    button {
-      background: #2e7d32;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      opacity: 0.9;
-    }
-    .log {
-      margin-top: 15px;
-      font-size: 14px;
-    }
+    body { font-family: Arial, sans-serif; padding: 40px; }
+    button { padding: 12px; width: 100%; margin: 6px 0; font-size: 16px; cursor: pointer; }
+    .google { background: #4285F4; color: white; border: none; }
+    .email { background: #555; color: white; border: none; }
+    .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,.5); justify-content: center; align-items: center; }
+    .box { background: white; padding: 20px; width: 300px; border-radius: 8px; text-align: center; }
+    input { width: 100%; padding: 10px; margin-bottom: 8px; font-size: 16px; }
   </style>
 </head>
 
 <body>
 
+<button id="openLogin" aria-haspopup="dialog">Zaloguj się</button>
+
+<div class="modal" id="loginModal" role="dialog" aria-modal="true" aria-labelledby="loginTitle">
   <div class="box">
-    <h3>Wyślij email</h3>
-
-    <input
-      type="email"
-      id="email"
-      placeholder="Wpisz email"
-      required
-    />
-
-    <button id="sendBtn">Wyślij</button>
-
-    <div class="log" id="log"></div>
+    <h3 id="loginTitle">Logowanie</h3>
+    <input type="email" id="emailInput" placeholder="Email" aria-label="Email" />
+    <button class="email" id="emailBtn">Zaloguj e-mailem</button>
+    <button class="google" id="googleBtn">Zaloguj Google</button>
+    <button id="closeLogin">Zamknij</button>
   </div>
+</div>
 
-  <script>
-    const btn = document.getElementById("sendBtn");
-    const log = document.getElementById("log");
+<script>
+document.addEventListener('DOMContentLoaded', async () => {
+  // === KONFIGURACJA SUPABASE ===
+  const SUPABASE_URL = 'https://tfbqqduxtsacvwfigsvt.supabase.co';
+  const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8';
 
-    btn.addEventListener("click", async () => {
-      const email = document.getElementById("email").value.trim();
+  // Try to dynamically import the ESM build from CDN so we can catch errors
+  let supabaseClient = null;
+  try {
+    const mod = await import('https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm');
+    if (typeof mod.createClient === 'function') {
+      supabaseClient = mod.createClient(SUPABASE_URL, SUPABASE_KEY);
+    } else {
+      console.error('createClient not found in imported supabase module:', mod);
+      alert('Nie można załadować biblioteki Supabase (brak createClient). Sprawdź konsolę.');
+    }
+  } catch (err) {
+    console.error('Błąd podczas importu Supabase z CDN:', err);
+    alert('Błąd ładowania biblioteki Supabase. Sprawdź konsolę/Network i użyj poprawnego CDN.');
+  }
 
-      if (!email) {
-        log.innerText = "❌ Podaj email";
-        return;
-      }
+  // === ELEMENTY UI ===
+  const modal = document.getElementById('loginModal');
+  const openLogin = document.getElementById('openLogin');
+  const closeLogin = document.getElementById('closeLogin');
+  const googleBtn = document.getElementById('googleBtn');
+  const emailBtn = document.getElementById('emailBtn');
+  const emailInput = document.getElementById('emailInput');
 
-      log.innerText = "⏳ Wysyłam email...";
+  openLogin.addEventListener('click', () => {
+    modal.style.display = 'flex';
+    emailInput.focus();
+  });
 
-      try {
-        const res = await fetch(
-          "https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send-otp",
-          {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json"
-            },
-            body: JSON.stringify({ email })
+  closeLogin.addEventListener('click', () => {
+    modal.style.display = 'none';
+  });
+
+  modal.addEventListener('click', (e) => {
+    if (e.target === modal) modal.style.display = 'none';
+  });
+
+  document.addEventListener('keydown', (e) => {
+    if (e.key === 'Escape' && modal.style.display === 'flex') {
+      modal.style.display = 'none';
+    }
+  });
+
+  // === GOOGLE LOGIN ===
+  googleBtn.addEventListener('click', async () => {
+    if (!supabaseClient) return alert('SDK Supabase nie jest dostępny. Sprawdź konsolę.');
+    try {
+      const { error } = await supabaseClient.auth.signInWithOAuth({
+        provider: 'google',
+        options: { redirectTo: 'https://orep.pl/wyszukiwarka' }
+      });
+      if (error) alert('Błąd Google: ' + error.message);
+    } catch (err) {
+      console.error('Błąd wywołania signInWithOAuth:', err);
+      alert('Błąd podczas logowania Google (sprawdź konsolę).');
+    }
+  });
+
+  // === EMAIL LOGIN (magic link) ===
+  emailBtn.addEventListener('click', async () => {
+    if (!supabaseClient) return alert('SDK Supabase nie jest dostępny. Sprawdź konsolę.');
+    const email = emailInput.value.trim();
+    if (!email) return alert('Podaj email');
+
+    try {
+      const { error } = await supabaseClient.auth.signInWithOtp({
+        email,
+        options: { emailRedirectTo: 'https://orep.pl/wyszukiwarka' }
+      });
+      if (error) alert('Błąd e-mail: ' + error.message);
+      else alert('Sprawdź e-mail (link logowania)');
+    } catch (err) {
+      console.error('Błąd wywołania signInWithOtp:', err);
+      alert('Błąd podczas wysyłania linku (sprawdź konsolę).');
+    }
+  });
+
+  // === OBSERWACJA STANU AUTORYZACJI (bez pętli przekierowań) ===
+  let subscription = null;
+  if (supabaseClient) {
+    try {
+      const { data } = supabaseClient.auth.onAuthStateChange((event, session) => {
+        console.log('onAuthStateChange:', event, session?.user?.email);
+        // redirect tylko przy SIGNED_IN i tylko jeśli nie jesteśmy już na docelowej ścieżce
+        if (event === 'SIGNED_IN' && session?.user?.email) {
+          const targetPath = '/wyszukiwarka';
+          const redirectedFlag = 'supabase_redirected';
+          if (location.pathname !== targetPath && !sessionStorage.getItem(redirectedFlag)) {
+            // zaznaczamy, że przekierowaliśmy, by uniknąć pętli przy odświeżeniach
+            sessionStorage.setItem(redirectedFlag, '1');
+            window.location.href = targetPath;
+          } else {
+            console.log('Przekierowanie pominięte (już na docelowej stronie lub wcześniej przekierowano).');
           }
-        );
-
-        const data = await res.json();
-
-        if (!res.ok) {
-          console.error(data);
-          log.innerText = "❌ Błąd: " + (data.error || res.status);
-          return;
         }
+      });
+      subscription = data?.subscription;
+    } catch (err) {
+      console.error('Błąd przy onAuthStateChange:', err);
+    }
+  }
 
-        log.innerText = "✅ Email wysłany poprawnie!";
-        console.log("OK:", data);
-
-      } catch (err) {
-        console.error(err);
-        log.innerText = "❌ Błąd połączenia";
-      }
-    });
-  </script>
+  // Odłącz subskrypcję przy unload i usuń flagę przekierowania
+  window.addEventListener('beforeunload', () => {
+    try {
+      sessionStorage.removeItem('supabase_redirected');
+    } catch (e) {}
+    if (subscription && typeof subscription.unsubscribe === 'function') {
+      subscription.unsubscribe();
+    }
+  });
+});
+</script>
 
 </body>
 </html>
