--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Logowanie – Supabase</title>
 
-  <!-- Supabase JS -->
+  <!-- Supabase JS CDN -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
@@ -40,6 +40,7 @@
       background: rgba(0,0,0,.5);
       justify-content: center;
       align-items: center;
+      z-index: 999;
     }
 
     .box {
@@ -80,10 +81,10 @@
 
 <body>
 
-<!-- Avatar -->
+<!-- AWATAR -->
 <button id="avatarBtn" class="avatar-btn">👤</button>
 
-<!-- Modal -->
+<!-- MODAL LOGOWANIA -->
 <div class="modal" id="loginModal">
   <div class="box">
     <h3>Logowanie</h3>
@@ -98,20 +99,21 @@
 </div>
 
 <script>
-/* ================================
-   KONFIGURACJA SUPABASE
-================================ */
+/* ==========================
+   SUPABASE CONFIG
+========================== */
 const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
 
-const supabase = supabaseJs.createClient(
+// globalny obiekt z CDN → supabase
+const sb = supabase.createClient(
   SUPABASE_URL,
   SUPABASE_ANON_KEY
 );
 
-/* ================================
-   LOGIKA UI + LOGOWANIE
-================================ */
+/* ==========================
+   APP LOGIC
+========================== */
 document.addEventListener('DOMContentLoaded', async () => {
   const avatarBtn = document.getElementById('avatarBtn');
   const modal = document.getElementById('loginModal');
@@ -120,19 +122,25 @@ document.addEventListener('DOMContentLoaded', async () => {
   const emailInput = document.getElementById('emailInput');
   const log = document.getElementById('log');
 
-  // Otwórz / zamknij modal
-  avatarBtn.onclick = () => modal.style.display = 'flex';
-  closeLogin.onclick = () => modal.style.display = 'none';
-  modal.onclick = e => { if (e.target === modal) modal.style.display = 'none'; };
+  // klik awatara
+  avatarBtn.addEventListener('click', () => {
+    modal.style.display = 'flex';
+  });
 
-  // Sprawdź czy użytkownik już zalogowany
-  const { data: { user } } = await supabase.auth.getUser();
+  // zamykanie modala
+  closeLogin.onclick = () => modal.style.display = 'none';
+  modal.onclick = e => {
+    if (e.target === modal) modal.style.display = 'none';
+  };
+
+  // sprawdź czy użytkownik już zalogowany
+  const { data: { user } } = await sb.auth.getUser();
   if (user) {
     avatarBtn.classList.add('logged-in');
     avatarBtn.textContent = user.email[0].toUpperCase();
   }
 
-  // Logowanie magic link
+  // wysyłanie magic linka
   emailBtn.onclick = async () => {
     const email = emailInput.value.trim();
     if (!email) {
@@ -142,7 +150,7 @@ document.addEventListener('DOMContentLoaded', async () => {
 
     log.innerText = "⏳ Wysyłam magic link...";
 
-    const { error } = await supabase.auth.signInWithOtp({
+    const { error } = await sb.auth.signInWithOtp({
       email,
       options: {
         emailRedirectTo: "https://orep.pl/wyszukiwarka"
