--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -75,6 +75,7 @@
     .log {
       font-size: 14px;
       margin-top: 10px;
+      white-space: pre-line; /* <-- WAŻNE */
     }
   </style>
 </head>
@@ -105,7 +106,6 @@
 const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
 
-// globalny obiekt z CDN → supabase
 const sb = supabase.createClient(
   SUPABASE_URL,
   SUPABASE_ANON_KEY
@@ -122,25 +122,21 @@ document.addEventListener('DOMContentLoaded', async () => {
   const emailInput = document.getElementById('emailInput');
   const log = document.getElementById('log');
 
-  // klik awatara
   avatarBtn.addEventListener('click', () => {
     modal.style.display = 'flex';
   });
 
-  // zamykanie modala
   closeLogin.onclick = () => modal.style.display = 'none';
   modal.onclick = e => {
     if (e.target === modal) modal.style.display = 'none';
   };
 
-  // sprawdź czy użytkownik już zalogowany
   const { data: { user } } = await sb.auth.getUser();
   if (user) {
     avatarBtn.classList.add('logged-in');
     avatarBtn.textContent = user.email[0].toUpperCase();
   }
 
-  // wysyłanie magic linka
   emailBtn.onclick = async () => {
     const email = emailInput.value.trim();
     if (!email) {
@@ -148,7 +144,7 @@ document.addEventListener('DOMContentLoaded', async () => {
       return;
     }
 
-    log.innerText = "⏳ Zapisuję Twoje dane w bazie danych Auth";
+    log.innerText = "⏳ Wysyłamy link logowania…";
 
     const { error } = await sb.auth.signInWithOtp({
       email,
@@ -162,8 +158,10 @@ document.addEventListener('DOMContentLoaded', async () => {
       return;
     }
 
-    log.innerText = "✅ Wysłaliśmy Tobie wiadomość e-mail. Potwierdź swoją tożsamość";
-    setTimeout(() => modal.style.display = 'none', 800);
+    log.innerText =
+      "✅ Wysłaliśmy e-mail z linkiem logowania.\n\n" +
+      "👉 Otwórz swoją skrzynkę pocztową i kliknij link, aby się zalogować.\n\n" +
+      "Jeśli nie widzisz wiadomości — sprawdź folder SPAM.";
   };
 });
 </script>
